# sqlite-es

./: Cargo.toml  README.md  deny.toml
.github/: ci.yaml
.github/workflows/: ci.yaml  pr-verify.yaml
db/: init.sql
src/: cqrs.rs  error.rs  event_repository.rs  init.rs  lib.rs  testing.rs  types.rs  view_repository.rs
