[package]
name = "sqlite-es"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
readme = "README.md"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A Sqlite implementation of an event repository for cqrs-es."
repository = "https://github.com/kairsas/sqlite-es"
documentation = "https://docs.rs/sqlite-es"
license = "MIT OR Apache-2.0"

[dependencies]
cqrs-es = "0.4.12"

async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "json"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
uuid = { version = "1.10", features = ["v4"] }

[features]
default = ["runtime-tokio-rustls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]